# DENNES_IA

./: .~lock.dados.csv#  README.md  pyproject.toml  requeriments.txt
