[tool.poetry]
name = "jose-dennes-ia"
version = "0.1.0"
description = ""
authors = ["Victor Ribeiro <victorcesargomesribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
groq = "^0.13.1"
langchain = "^0.3.13"
openai = "^1.58.1"
langchain-openai = "^0.2.14"
langchain-groq = "^0.2.2"
langchain-community = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
